--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -99,7 +99,6 @@ a:hover {
   filter: alpha(opacity=0);
 }
 
-.badge {
-  font-weight: 300 !important;
-  padding: 0.60em 0.5em !important;
+#blog_tag {
+  font-weight: 400;
 }
