--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.featurette-heading {
+  line-height: 1.5;
+  font-weight: 400;
+}
+
+.lead {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 2;
+}
+
+#hover-effect-1::after, #hover-effect-2::after, #hover-effect-3::after {
+  content:"";
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:rgba(255, 255, 255, 0.5);
+  display:none;
+}
+
+#hover-effect-1:hover::after, #hover-effect-2:hover::after, #hover-effect-3:hover::after {
+  display:block;
+}
+
