ref #2 - ホームデザイン修正 - ビューティー記事Showページ作成

--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -5,7 +5,7 @@
     <h1><%= @news.title %></h1>
     <hr>
     <div class="my-5">
-      <%= sanitize(@news.content) %>
+      <%== @news.content %>
     </div>
     <hr>
     <div class="text-right mt-4">
