--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -23,8 +23,9 @@ a:hover {
 .widget.single-news .image img {
   display: block;
   width: 100%;
-  height: 340px;
+  height: 300px;
   object-fit: cover;
+  border-radius: 3%;
 }
 
 .widget.single-news .image .gradient {
@@ -38,6 +39,7 @@ a:hover {
   background-image: -moz-linear-gradient(bottom, #000000 0%, rgba(0, 0, 0, 0.05) 100%);
   background-image: -o-linear-gradient(bottom, #000000 0%, rgba(0, 0, 0, 0.05) 100%);
   background-image: linear-gradient(to top, #000000 0%, rgba(0, 0, 0, 0.05) 100%);
+  border-radius: 3%;
 }
 
 .widget.single-news .details {
@@ -101,4 +103,8 @@ a:hover {
 
 #blog_tag {
   font-weight: 400;
+}
+
+#thumbnail {
+  margin: auto;
 }
