--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -12,18 +12,44 @@
   line-height: 2;
 }
 
-#hover-effect-1::after, #hover-effect-2::after, #hover-effect-3::after {
-  content:"";
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background-color:rgba(255, 255, 255, 0.5);
-  display:none;
+#hover-effect-1::after,
+#hover-effect-2::after,
+#hover-effect-3::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: none;
 }
 
-#hover-effect-1:hover::after, #hover-effect-2:hover::after, #hover-effect-3:hover::after {
-  display:block;
+#hover-effect-1:hover::after,
+#hover-effect-2:hover::after,
+#hover-effect-3:hover::after {
+  display: block;
 }
 
+#blog_img-1,
+#blog_img-2,
+#blog_img-3 {
+  width: 430px;
+  height: 430px;
+  object-fit: cover;
+  border-radius: 3%;
+}
+
+#blog_img-1,
+#blog_img,
+#blog_img-3 {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+#blog_img-1:hover,
+#blog_img-2:hover,
+#blog_img-3:hover {
+  opacity: 0.3;
+  filter: alpha(opacity=30);
+}
