--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -1,4 +1,4 @@
-$am-theme-primary: #124eb6dd;
+$am-theme-primary: #d33c3cdd !default;
 @import 'activeadmin_addons/all';
 @import "active_material";
 
