--- a/app/views/carts/create.js.erb
+++ b/app/views/carts/create.js.erb
@@ -2,6 +2,5 @@
         result = confirm("<%= @notice %>")
 
         if (result) {
-            location.href = "/carts"
-        }
+            location.href = "/carts"}
 <% end %>
