--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
       <div class="navbar-nav">
           <a class="nav-link" href="#">メーカー</a>
           <a class="nav-link active" href="/cosmetics">ショッピング</a>
-          <a class="nav-link" href="#">オススメ</a>
+          <a class="nav-link active text-danger" href="#">期間限定セール</a>
           <a class="nav-link active" href="/blogs">ビューティコラム</a>
           <a class="nav-link active" href="/news">お知らせ</a>
           <%# ログインしているユーザが見れる部分  %>
