ref #3 コメント作成、修正、削除機能追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,9 @@
 /*
 *= require active_admin
-*= require home
 *= require blogs
 *= require news
+*= require cosmetics
+*= require home
 *= require_self
  */
 
