--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
- <footer class="pt-2 my-md-4 pt-md-3 border-top">
+ <footer class="pt-3 my-md-4 pt-md-3 mx-5 border-top">
        <div class="float-left">
         <img class="mb-2" src="<%= asset_path("loen.png") %>" alt="" width="130" height="60">
         <small class="d-block mb-3 text-muted">&copy; 2020</small>
