--- a/app/views/cosmetics/update_comment.js.erb
+++ b/app/views/cosmetics/update_comment.js.erb
@@ -1,5 +1,5 @@
-alert("修正完了");
+alert("修正 完了");
 var edit_comment = $('.comment-detail-<%= @comment.id %>');
 edit_comment.html('<%= @comment.contents %>');
-$('.update-comment').text("修正").removeClass("update-comment btn-dark").addClass("edit-comment btn-warning");
+$('.update-comment').text("確認").removeClass("update-comment btn-warning").addClass("edit-comment btn-primary");
 
