--- a/app/assets/stylesheets/cosmetics.scss
+++ b/app/assets/stylesheets/cosmetics.scss
@@ -35,3 +35,9 @@ body {
   text-align: right;
 
 }
+
+.comment-wrapper .media-list .media img {
+  width: 20px;
+  height: 20px;
+  border: none;
+}
